Setup settings for iOS packing

--- a/battleTank/Config/DefaultEngine.ini
+++ b/battleTank/Config/DefaultEngine.ini
@@ -7,6 +7,13 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/battleGround.battleGround
-GameDefaultMap=/Game/battleGround.battleGround
+EditorStartupMap=/Game/_levels/battleGround.battleGround
+GameDefaultMap=/Game/_levels/mainMenu.mainMenu
+
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+BundleDisplayName=Battle Tank
+BundleName=battleTank
+BundleIdentifier=com.robitto.battleTank
+MobileProvision=
+SigningCertificate=
 
