--- a/battleTank/Config/DefaultGame.ini
+++ b/battleTank/Config/DefaultGame.ini
@@ -1,2 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=908B0196B44E9F8D96C499BADDF51BAE
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+FullRebuild=True
+UsePakFile=False
+bGenerateChunks=False
+ForDistribution=True
+
