Creates the tank player controller class

--- a/battleTank/Config/DefaultGame.ini
+++ b/battleTank/Config/DefaultGame.ini
@@ -1,5 +1,11 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=908B0196B44E9F8D96C499BADDF51BAE
+CompanyName=Robinson Presotto
+CompanyDistinguishedName=Robitto Inc.
+Homepage=www.labvidas.com.br
+SupportContact=robipresotto@gmail.com
+CopyrightNotice=Copyright 2017 Robinson Presotto. All rights reserved.
+LicensingTerms=MIT
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
@@ -7,4 +13,3 @@ FullRebuild=True
 UsePakFile=False
 bGenerateChunks=False
 ForDistribution=True
-
