Move towards the player 🤠

--- a/battleTank/Config/DefaultInput.ini
+++ b/battleTank/Config/DefaultInput.ini
@@ -63,7 +63,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="Quit Menu",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Fire",Key=Touch1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Fire",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Quit Menu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Quit Menu",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -78,7 +78,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="Left Track Throttle",Key=Left,Scale=1.000000)
 -AxisMappings=(AxisName="Right Track Throttle",Key=Right,Scale=1.000000)
 -AxisMappings=(AxisName="Move Forward",Key=Gamepad_LeftY,Scale=1.000000)
--AxisMappings=(AxisName="Move Forward",Key=W,Scale=1.000000)
+-AxisMappings=(AxisName="Move Forward",Key=W,Scale=0.500000)
 -AxisMappings=(AxisName="Move Right",Key=D,Scale=1.000000)
 -AxisMappings=(AxisName="Move Right",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_LeftX,Scale=1.000000)
@@ -89,8 +89,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 +AxisMappings=(AxisName="Left Track Throttle",Key=Left,Scale=1.000000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=Right,Scale=1.000000)
-+AxisMappings=(AxisName="Move Forward",Key=Gamepad_LeftY,Scale=1.000000)
-+AxisMappings=(AxisName="Move Forward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="Move Forward",Key=Gamepad_LeftY,Scale=0.500000)
++AxisMappings=(AxisName="Move Forward",Key=W,Scale=0.500000)
 +AxisMappings=(AxisName="Move Right",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="Move Right",Key=Gamepad_LeftX,Scale=1.000000)
 bAlwaysShowTouchInterface=False
