--- a/battleTank/Config/DefaultInput.ini
+++ b/battleTank/Config/DefaultInput.ini
@@ -79,8 +79,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="Right Track Throttle",Key=Right,Scale=1.000000)
 -AxisMappings=(AxisName="Move Forward",Key=Gamepad_LeftY,Scale=1.000000)
 -AxisMappings=(AxisName="Move Forward",Key=W,Scale=1.000000)
--AxisMappings=(AxisName="Move Right",Key=D,Scale=1.000000)
--AxisMappings=(AxisName="Move Right",Key=Gamepad_LeftX,Scale=0.500000)
+-AxisMappings=(AxisName="Move Right",Key=D,Scale=-1.000000)
+-AxisMappings=(AxisName="Move Right",Key=Gamepad_LeftX,Scale=1.000000)
+-AxisMappings=(AxisName="Move Forward",Key=S,Scale=-1.000000)
+-AxisMappings=(AxisName="Move Right",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=-1.000000)
@@ -91,8 +93,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Right Track Throttle",Key=Right,Scale=1.000000)
 +AxisMappings=(AxisName="Move Forward",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="Move Forward",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="Move Right",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="Move Right",Key=D,Scale=-1.000000)
 +AxisMappings=(AxisName="Move Right",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="Move Forward",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="Move Right",Key=A,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
